<resources>
    <string name="app_name">Examiner</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">No Internet Connection</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="question1">what is android?</string>
    <string name="answer1">It is android</string>
    <string name="answer2">It is android</string>
    <string name="answer3">wt is android</string>
    <string name="question2">what is php?</string>
    <string name="question3">what is Java?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="Next">Next</string>
    <string name="chang_icon">Change Icon</string>

    <string name="save">Save</string>
    <string name="add_category">Please Add Category</string>
    <string name="Previous">Previous</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

    <string-array name="type_array">
        <item>Examiner</item>
        <item>Recuiter</item>
        <item>Talent</item>


    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCbNPy5hqDEQXXXXXXXXXXXXXXXXXXXX
    </string>

    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>

    <string name="about_text">The best android implementation of material UI components. This app implemented based on Google Design Guidelines.
    </string>
    <string name="adress">Adress</string>
    <string name="l_name">Last Name</string>
    <string name="tack_photo">Tack a Photo</string>
    <string name="Register">Register</string>
    <string name="Sign_up">Sign up</string>


    <string name="dialog_info_exam">
        This test contains %1$s questions, which must be answered in less than %2$s minutes./n
        Ready to start the test?
    </string>
    <string name="dialog_delet_choice">Delete selected choice</string>


</resources>
