<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#131A56"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:indeterminateTint="#ffff"
        android:indeterminate="true"
        android:id="@+id/progress"


        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:text="@string/question2"
        android:textColor="#ffff"
        android:textSize="40sp"

        android:layout_marginEnd="50dp"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical"


        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:text="@string/answer1"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:text="@string/answer2"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:text="@string/answer3"></RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:textSize="33sp" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:textSize="33sp" />
    </LinearLayout>

</LinearLayout>