<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#6f79a8"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="sign up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal"

        android:weightSum="3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_person_add_imge" />

        <ImageView
            android:id="@+id/gallary"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_image_gallery" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_camera" />

    </LinearLayout>

    <EditText

        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="10dp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@android:color/white"
        android:spinnerMode="dropdown"
        style="@style/spinner_style"
        />


    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:text="@string/Next"
        android:textColor="@android:color/white" />


</LinearLayout>

